ops/3-tf-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tf-python
spec:
    type: ClusterIP # delete my nodebalancer from Linode
    ports:
        - name: http
          port: 80
          targetPort: 8080
          protocol: TCP
    selector:
        app: tf-python
